Fixed responsive issues on mobile.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -20,6 +20,15 @@ $colour-silver: #bdc3c7;
 $colour-concrete: #95a5a6;
 $colour-asbestos: #7f8c8d;
 
+// Breakpoints
+$bp-4k: 2560px;
+$bp-laptop-lg: 1440px;
+$bp-laptop: 1024px;
+$bp-tablet: 768px;
+$bp-mobile-lg: 425px;
+$bp-mobile-md: 375px;
+$bp-mobile-sm: 320px;
+
 // App
 $background: #141414;
 $foreground: #fff;
